[workspace]
resolver = "2"
members = [
  "cose_sign1_validation",
  "cose_sign1_validation_trust",
  "cose_sign1_validation_certificates",
  "cose_sign1_validation_transparent_mst",
  "cose_sign1_validation_azure_key_vault",
  "cose_sign1_validation_demo",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
ring = "0.17"
hex = "0.4"
sha1 = "0.10"
time = { version = "0.3", features = ["macros"] }

# JSON + base64url (for MST JWKS parsing)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# X.509 parsing
x509-parser = "0.16"

# Prefer tinycbor (per requirements)
tinycbor = { version = "0.10", features = ["alloc", "std"] }

# Concurrency + plumbing
once_cell = "1"
parking_lot = "0.12"
regex = "1"
url = "2"

# HTTP client (used for optional online JWKS retrieval)
ureq = { version = "2", features = ["tls"] }
