[workspace]
resolver = "2"
members = [
  "primitives/crypto",
  "primitives/cbor",
  "primitives/cbor/everparse",
  "primitives/cose",
  "primitives/cose/sign1",
  "primitives/cose/sign1/ffi",
  "primitives/crypto/openssl",
  "primitives/crypto/openssl/ffi",
  "signing/core",
  "signing/core/ffi",
  "signing/factories",
  "signing/factories/ffi",
  "signing/headers",
  "signing/headers/ffi",
  "validation/core",
  "validation/core/ffi",
  "validation/primitives",
  "validation/primitives/ffi",
  "validation/demo",
  "validation/test_utils",
  "did/x509",
  "did/x509/ffi",
  "extension_packs/certificates",
  "extension_packs/certificates/ffi",
  "extension_packs/certificates/local",
  "extension_packs/certificates/local/ffi",
  "extension_packs/mst",
  "cli",
  "extension_packs/mst/ffi",
  "extension_packs/azure_key_vault",
  "extension_packs/azure_key_vault/ffi",
  "extension_packs/azure_artifact_signing",
  "extension_packs/azure_artifact_signing/ffi",
  "extension_packs/azure_artifact_signing/client",
  "partner/cose_openssl",
  "partner/cose_openssl/ffi",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
sha2 = "0.10"
ring = "0.17"
hex = "0.4"
sha1 = "0.10"
tracing = "0.1"

# JSON + base64url (for MST JWKS parsing)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# X.509 parsing
x509-parser = "0.18"

# OpenSSL bindings
openssl = "0.10"

# PQC signatures (FIPS 204 ML-DSA)
pqcrypto-mldsa = { version = "0.1.2", default-features = false, features = ["std"] }
pqcrypto-traits = { version = "0.3.5", default-features = false, features = ["std"] }


# Concurrency + plumbing
once_cell = "1"
parking_lot = "0.12"
regex = "1"
url = "2"

# Azure SDK dependencies
azure_core = { version = "0.32", default-features = false, features = ["reqwest", "reqwest_native_tls"] }
azure_identity = "0.32"
azure_security_keyvault_keys = "0.11"
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.13", features = ["json", "rustls-tls"] }
async-trait = "0.1"

