[workspace]
resolver = "2"
members = [
  "primitives/crypto",
  "primitives/cbor",
  "primitives/cbor/everparse",
  "primitives/cose",
  "primitives/cose/sign1",
  "primitives/cose/sign1/ffi",
  "primitives/crypto/openssl",
  "primitives/crypto/openssl/ffi",
  "signing/core",
  "signing/core/ffi",
  "signing/factories",
  "signing/factories/ffi",
  "signing/headers",
  "signing/headers/ffi",
  "validation/core",
  "validation/core/ffi",
  "validation/primitives",
  "validation/primitives/ffi",
  "validation/test_utils",
  "did/x509",
  "did/x509/ffi",
  "extension_packs/certificates",
  "extension_packs/certificates/ffi",
  "extension_packs/certificates/local",
  "extension_packs/certificates/local/ffi",
  "extension_packs/azure_key_vault",
  "extension_packs/azure_key_vault/ffi",
  "extension_packs/mst",
  "extension_packs/mst/client",
  "extension_packs/mst/ffi",
  "extension_packs/azure_artifact_signing",
  "extension_packs/azure_artifact_signing/client",
  "extension_packs/azure_artifact_signing/ffi",
  "cose_openssl",
  "cli",
  "cli/plugin-api",
  "benches",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.dependencies]
anyhow = "1"
sha2 = "0.10"
ring = "0.17"
hex = "0.4"
sha1 = "0.10"
tracing = "0.1"

# JSON + base64url (for MST JWKS parsing)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# X.509 parsing
x509-parser = "0.18"

# OpenSSL bindings.
# Default: uses system-installed OpenSSL (via OPENSSL_DIR env var or vcpkg).
# For self-contained builds without system OpenSSL, enable the vendored feature:
#   cargo build --features openssl/vendored
# (requires Perl and a C compiler on the build machine)
openssl = "0.10"
openssl-sys = "0.9"

# Concurrency + plumbing
# once_cell removed — migrated to std::sync::LazyLock (Rust 1.80+)
# parking_lot removed — unused (std::sync::Mutex suffices)
regex = "1"
url = "2"

# Azure SDK dependencies
azure_core = { version = "0.33", default-features = false, features = ["reqwest", "reqwest_native_tls"] }
azure_identity = "0.33"
azure_security_keyvault_keys = "0.12"
azure_security_keyvault_certificates = "0.11"  # Planned: proper cert fetch in AKV certificate source
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.13", features = ["json", "rustls-tls"] }
async-trait = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }

