# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cosesign1-abstractions"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Shared IDs and registries.
inventory = "0.3"
uuid.workspace = true
thiserror.workspace = true

[lib]
# `inventory` uses linker sections; this must be a normal lib crate.
crate-type = ["lib"]
