# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cosesign1-mst"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cosesign1-common = { path = "../cosesign1-common" }
cosesign1-validation = { path = "../cosesign1-validation" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
