# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cosesign1-mst"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cosesign1-common = { path = "../cosesign1-common" }
cosesign1-validation = { path = "../cosesign1-validation" }
base64.workspace = true
minicbor.workspace = true
p256.workspace = true
p384.workspace = true
p521.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
