# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cosesign1-validation"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cosesign1-common = { path = "../cosesign1-common" }
thiserror.workspace = true
signature.workspace = true
sha2.workspace = true
ml-dsa.workspace = true
p256.workspace = true
p384.workspace = true
p521.workspace = true
rsa.workspace = true
x509-parser.workspace = true

[dev-dependencies]
minicbor.workspace = true
rcgen.workspace = true
spki = "0.7"
