# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cosesign1-x509"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cosesign1-common = { path = "../cosesign1-common" }
cosesign1-validation = { path = "../cosesign1-validation" }
rustls-native-certs.workspace = true
thiserror.workspace = true
x509-parser.workspace = true

[dev-dependencies]
minicbor.workspace = true
rcgen.workspace = true
p256.workspace = true
signature.workspace = true
