# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cosesign1-x509"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cosesign1-abstractions = { path = "../cosesign1-abstractions" }
inventory = "0.3"
uuid.workspace = true
rustls-native-certs.workspace = true
sha2.workspace = true
signature.workspace = true
rsa.workspace = true
p256.workspace = true
p384.workspace = true
p521.workspace = true
thiserror.workspace = true
x509-parser.workspace = true

[dev-dependencies]
minicbor.workspace = true
rcgen.workspace = true
p256.workspace = true
signature.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }
