# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cosesign1"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cosesign1-abstractions = { path = "../cosesign1-abstractions" }

minicbor.workspace = true
ml-dsa.workspace = true
p256.workspace = true
p384.workspace = true
p521.workspace = true
rsa.workspace = true
signature.workspace = true
x509-parser.workspace = true
sha2.workspace = true

# MST support is optional at this layer for now; the MST verifier operates on
# transparent statements (which are COSE_Sign1), but its verification model is
# distinct from key/x509 signature verification.
