[package]
name = "cose_benchmarks"
edition = { workspace = true }
license = { workspace = true }
version = "0.1.0"
publish = false

[lib]
test = false

[features]
pqc = ["cose_sign1_crypto_openssl/pqc", "cose_sign1_certificates_local/pqc"]
composite = ["pqc", "cose_sign1_certificates_local/composite"]

[dev-dependencies]
criterion = { workspace = true }

# Crates to benchmark
cose_sign1_primitives = { path = "../primitives/cose/sign1" }
cose_primitives = { path = "../primitives/cose" }
cose_sign1_crypto_openssl = { path = "../primitives/crypto/openssl" }
cose_sign1_signing = { path = "../signing/core" }
cose_sign1_factories = { path = "../signing/factories" }
cose_sign1_certificates = { path = "../extension_packs/certificates" }
cose_sign1_certificates_local = { path = "../extension_packs/certificates/local" }
crypto_primitives = { path = "../primitives/crypto" }
openssl = { workspace = true }
sha2 = { workspace = true }

[[bench]]
name = "cose_benchmarks"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)', 'cfg(feature, values("pqc", "composite"))'] }
