[package]
name = "cose-openssl"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
description = "Low-level OpenSSL bindings for COSE signing and verification"

[lib]
crate-type = ["lib"]

[features]
pqc = []

[lints.rust]
warnings = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
openssl-sys = "0.9"
cborrs = { git = "https://github.com/project-everest/everparse.git", rev = "f4cd5ffa183edd5cc824d66588012bcf8d0bdccd" } # v2026.02.25
cborrs-nondet = { git = "https://github.com/project-everest/everparse.git", rev = "f4cd5ffa183edd5cc824d66588012bcf8d0bdccd" } # v2026.02.25
