[package]
name = "cose_sign1_validation"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true

once_cell.workspace = true
regex.workspace = true

tinycbor.workspace = true

cose_sign1_validation_trust = { path = "../cose_sign1_validation_trust" }

[dev-dependencies]
anyhow.workspace = true

x509-parser.workspace = true

cose_sign1_validation_transparent_mst = { path = "../cose_sign1_validation_transparent_mst" }
cose_sign1_validation_certificates = { path = "../cose_sign1_validation_certificates" }
cose_sign1_validation_azure_key_vault = { path = "../cose_sign1_validation_azure_key_vault" }
