[package]
name = "cose_sign1_validation"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
test = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true

sha1.workspace = true
sha2.workspace = true

once_cell.workspace = true
regex.workspace = true

tinycbor.workspace = true

cose_sign1_validation_trust = { path = "../cose_sign1_validation_trust" }

[dev-dependencies]
anyhow.workspace = true

x509-parser.workspace = true

cose_sign1_validation_transparent_mst = { path = "../cose_sign1_validation_transparent_mst" }
cose_sign1_validation_certificates = { path = "../cose_sign1_validation_certificates" }
cose_sign1_validation_azure_key_vault = { path = "../cose_sign1_validation_azure_key_vault" }
cose_sign1_validation_test_utils = { path = "../cose_sign1_validation_test_utils" }
