[package]
name = "cose_sign1_validation_certificates"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
test = false

[dependencies]
cose_sign1_validation = { path = "../cose_sign1_validation" }
cose_sign1_validation_trust = { path = "../cose_sign1_validation_trust" }
thiserror.workspace = true
tinycbor.workspace = true
sha1.workspace = true
ring.workspace = true
hex.workspace = true
x509-parser.workspace = true
pqcrypto-mldsa = { workspace = true, optional = true }
pqcrypto-traits = { workspace = true, optional = true }

[features]
default = []
## Enable verification of ML-DSA (FIPS 204) COSE algorithms (-48/-49/-50).
pqc-mldsa = ["dep:pqcrypto-mldsa", "dep:pqcrypto-traits"]

[dev-dependencies]
rcgen = "0.13"
tinycbor.workspace = true
