[package]
name = "cose_sign1_validation_demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
cose_sign1_validation = { path = "../cose_sign1_validation" }
cose_sign1_validation_trust = { path = "../cose_sign1_validation_trust" }
